--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "express": "^4.18.2",
     "joi": "^17.9.1",
     "nanoid": "^4.0.2",
-    "pg": "^8.11.1"
+    "pg": "^8.11.1",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
